Security Fix: Remove .env from Git, Add XSS protection to Resume templates, Improve Service Worker security

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@
 VITE_SUPABASE_URL=https://supabase.ashwheel.cloud
 VITE_SUPABASE_ANON_KEY=<GET_FROM_COOLIFY_AFTER_SUPABASE_DEPLOYMENT>
 
+# Admin Credentials (KEEP SECRET - DO NOT COMMIT TO GIT)
+# Change these to your own secure credentials
+VITE_ADMIN_EMAIL=your-admin-email@example.com
+VITE_ADMIN_PASSWORD=your-secure-password-here
+
 # Production Configuration
 # VPS IP: 31.97.235.213 (Hostinger KVM4)
 # Domain: ashwheel.cloud
@@ -14,4 +19,5 @@ VITE_SUPABASE_ANON_KEY=<GET_FROM_COOLIFY_AFTER_SUPABASE_DEPLOYMENT>
 # 1. Deploy Supabase in Coolify (Service → Supabase)
 # 2. Copy ANON_KEY from Coolify environment variables
 # 3. Update VITE_SUPABASE_ANON_KEY above
-# 4. Deploy Ashwheel app with these environment variables
+# 4. Set your admin credentials above
+# 5. Deploy Ashwheel app with these environment variables
